add context folder

--- a/src/component/mainToDo/main.scss
+++ b/src/component/mainToDo/main.scss
@@ -116,3 +116,14 @@ button:hover{
     transition: 900ms;
     cursor: pointer;
 }
+
+.display-button{
+    padding: 1%;
+    margin-left: 5pc;
+    width: 12pc;
+    font-size: 20px;
+    font-family: sans-serif;
+    color: white;
+    background-color: #d69317e3;
+    border-radius: 15%;
+}
